Fix button text misalignment

--- a/inner_air/main/dev/scss/components/_button.scss
+++ b/inner_air/main/dev/scss/components/_button.scss
@@ -13,6 +13,8 @@
     text-decoration: none;
     transition: all 0.2s ease-in-out;
     text-transform: uppercase;
+    text-align: center;
+    text-shadow: none;
     border: none;
     white-space: nowrap;
 
