--- a/inner_air/main/static/css/base.css
+++ b/inner_air/main/static/css/base.css
@@ -59,6 +59,8 @@
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
+  text-align: center;
+  text-shadow: none;
   border: none;
   white-space: nowrap;
 }
@@ -77,6 +79,8 @@
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
+  text-align: center;
+  text-shadow: none;
   border: none;
   white-space: nowrap;
 }
@@ -100,6 +104,8 @@
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
+  text-align: center;
+  text-shadow: none;
   border: none;
   white-space: nowrap;
 }
@@ -118,6 +124,8 @@
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
+  text-align: center;
+  text-shadow: none;
   border: none;
   white-space: nowrap;
 }
@@ -141,6 +149,8 @@
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
+  text-align: center;
+  text-shadow: none;
   border: none;
   white-space: nowrap;
 }
@@ -159,6 +169,8 @@
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
+  text-align: center;
+  text-shadow: none;
   border: none;
   white-space: nowrap;
 }
@@ -182,6 +194,8 @@
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
+  text-align: center;
+  text-shadow: none;
   border: none;
   white-space: nowrap;
 }
@@ -200,6 +214,8 @@
   text-decoration: none;
   transition: all 0.2s ease-in-out;
   text-transform: uppercase;
+  text-align: center;
+  text-shadow: none;
   border: none;
   white-space: nowrap;
 }
